fix: Make non-wrapping `VSpacer` use `<hr/>` (deprecate `<br/>` pattern)

--- a/src/scss/VSpacer.scss
+++ b/src/scss/VSpacer.scss
@@ -9,6 +9,7 @@
 	@media screen {
 		// Medium is the default.
 		.VSpacer[class] {
+			margin: 0;
 			margin-top: #{$var--component-vspace--medium};
 			margin-bottom: #{$var--component-vspace--medium};
 		}
@@ -51,14 +52,17 @@
 			margin-bottom: #{$var--component-vspace--xlarge};
 		}
 
-		// Drop-in (non-wrapping) <br/> variant.
-		br.VSpacer[class] {
+		br.VSpacer[class], // @deprecated (remove in v0.9)
+		// Drop-in (non-wrapping) <hr/> variant.
+		hr.VSpacer[class] {
 			display: block;
 			height: 0;
+			border: 0;
 			margin-bottom: 0;
 		}
+		br.VSpacer + [class], // @deprecated (remove in v0.9)
 		// Drop-in spacers override the top-margin of their next component sibling
-		br.VSpacer + [class] {
+		hr.VSpacer + [class] {
 			margin-top: 0;
 		}
 
